updated license